--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://Mark1:2HhdumfQxJnRJ65u@recipeapi.fvrldkc.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Mark1:ypJpQuY9H5xzabn2@recipesharingdb.wyzw9o0.mongodb.net/?retryWrites=true&w=majority
